Prevent word wrap in tag cloud

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -322,5 +322,6 @@
 
 .container .tag-cloud a {
     margin-right: 15px;
+    white-space: nowrap;
 }
 
